tests/parse_print/issues/425/2/stderr.expected
Error:
    tests/parse_print/issues/425/2/425.essence:2:15:
unexpected :
expecting expression
    letting s be {:}
                  ^